# timesfm-meteo

./: .claude-manual-verify.js  .env.example  .env.example.postgres  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.postgres.yml  main.py  pyproject.toml  servers.example.json
configs/: configs.example.yaml
docs/: api-server.md  cli-client.md  quantile-forecasting.md  roadmap.md  timesfm-engine.md  usage.md
docs/open-meteo/: README.md
openspec/changes/archive/2026-05-02-wire-cli-historical-fetch/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-add-forecast-evaluation/: design.md  proposal.md  (+1 more)
openspec/changes/fix-web-forecast-semantics/: design.md  proposal.md  tasks.md
openspec/specs/api-server/: spec.md
openspec/specs/cli-client/: spec.md
openspec/specs/forecast-evaluation/: spec.md
openspec/specs/historical-fetch/: spec.md
openspec/specs/temperature-forecasting/: spec.md
openspec/specs/web-dashboard/: spec.md
src/timesfm_meteo/: __init__.py  __main__.py  cli.py  config.py  configs.py  models.py
src/timesfm_meteo/api/: app.py  auth.py  deps.py  jobs.py  schemas.py
src/timesfm_meteo/client/: cli.py  http.py
src/timesfm_meteo/data_sources/: __init__.py  open_meteo.py
src/timesfm_meteo/db/: forecasts.py  jobs.py  repository.py
src/timesfm_meteo/evaluation/: __init__.py  metrics.py  orchestrator.py
src/timesfm_meteo/forecasting/: __init__.py  baseline.py  timesfm.py
src/timesfm_meteo/inference/: timesfm_engine.py
src/timesfm_meteo/pipeline/: __init__.py  forecast.py  historical.py
tests/: test_api_app.py  test_api_forecasts_serialization.py  test_api_jobs.py  test_api_read_endpoints.py  test_cli.py  test_client_cli.py  test_configs.py  test_db_forecasts.py  test_db_jobs.py  test_db_repository.py  test_evaluation_orchestrator.py  test_forecasting_timesfm.py  test_metrics.py  test_models.py  test_open_meteo.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.test.ts  client.ts  types.ts
web/src/components/: EvaluationPanel.tsx  FilterPanel.tsx  ForecastChart.tsx  JobControls.tsx
web/src/hooks/: useDashboardData.test.tsx  useDashboardData.ts  useJobPolling.test.tsx
web/src/lib/: chartData.test.ts  chartData.ts  date.test.ts  date.ts  validation.test.ts  validation.ts
(+27 files in other folders)
