[project]
name = "timesfm-meteo"
version = "0.1.0"
description = "Weather forecasting pipeline using Open-Meteo and TimesFM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
timesfm-meteo = "timesfm_meteo.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
