[project]
name = "timesfm-meteo"
version = "0.1.0"
description = "Weather forecasting pipeline using Open-Meteo and TimesFM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "numpy>=1.26",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]
forecast = [
    "timesfm[torch] @ git+https://github.com/google-research/timesfm.git",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg-pool>=3.2",
]

[project.scripts]
timesfm-meteo = "timesfm_meteo.cli:main"
timesfm-meteo-client = "timesfm_meteo.client.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
